--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/lukespicknall/restaurant-page#readme",
   "devDependencies": {
+    "css-loader": "^6.8.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
+    "style-loader": "^3.3.3",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4"
   }
