--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "devDependencies": {
     "css-loader": "^6.8.1",
     "eslint": "^8.43.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "style-loader": "^3.3.3",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4"
