--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "devDependencies": {
     "css-loader": "^6.8.1",
     "eslint": "^8.43.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.26.0",
+    "favicons": "^7.1.3",
+    "favicons-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
     "webpack": "^5.87.0",
